Modification zone hébgerments à marseille et ajout medias queries

--- a/css/style.css
+++ b/css/style.css
@@ -162,9 +162,13 @@ button::before {
   align-items: center;
 }
 .filters-container h2 {
-  margin-right: 32px;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  margin-right: 32px;
+}
+.filters{
+  display: flex;
+  justify-content: space-between;
 }
 .filter {
   display: flex;
@@ -234,17 +238,24 @@ button::before {
     width: 65%;   
 }
 
-.hebergements-cartes{
-  display: flex;
-  justify-content: space-between;
+.hebergements-cartes {
+display: flex;
+align-items: center;
+justify-content: space-between;
+flex-wrap: wrap;
 }
-
-.carte {
+.hebergements a{
   
+  box-sizing: border-box;
+  width: 33%;
+}
+.carte {
+  margin-right: 20px;
   background-color: white;
   border-radius: 20px;
   padding: 5px;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  
 }
 
 .carte img{
@@ -252,14 +263,13 @@ button::before {
 }
 .carte-title {
   font-size: 16px;
-  
+ 
 }
 
 .hebergements-title {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  
+
   
 }
 .hebergements-cartes .carte {
@@ -269,41 +279,38 @@ button::before {
 
 .hebergements-cartes img {
   width: 100%;
-  height: 110px;
+  height: 136px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
 
 .hebergements-cartes .carte-content {
   width: 100%;
-  padding-left: 15px;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
   box-sizing: border-box;
+  justify-content: space-between;
+} 
+.carte-content {
+ height: 120px;
 
-  
-}
+}  
 .hebergements-cartes .carte-title {
-  margin-top: 5px;
+  margin: 10px;
   margin-bottom: 4px;
+  
 }
 
 .hebergements-cartes .carte-subtitle {
-  margin: 0;
- 
+  margin:10px;
+  margin-bottom: 4px;
 }
 
 .hebergements-cartes .carte-rating {
-  margin-bottom: 5px;
+  margin: 10px;
+  margin-bottom: 4px;
 }
 
-.truncate{
-    width: 200px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
 
 
  .showmore {
@@ -385,54 +392,65 @@ button::before {
 
 
 /*******************ActivitésMarseille******************************/
-
-.activites {
- width: 95%;
-margin-right: 50px;
-  
-}
-.activites-photos{
-  display: flex;
+.activites-à-marseille{
   width: 100%;
-  justify-content: space-between;
-  gap: 17px;
-
+} 
+.activites-à-marseille a{
+  
+  box-sizing: border-box;
+  width: 33%;
+}
+.activites-photos {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;  
+}
+.activites h2{
+  margin-top: 60px;
 }
 
-.photo{
-  width: 23.6%;
+.photo {
+  margin-right: 20px;
   background-color: white;
   border-radius: 20px;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-  margin-left: 20px;
-}
-
-.photo img{
-  object-fit: cover;
-}
-
-.activites-photos  {
-  display: flex;
-  margin-top: 33px;
   margin-bottom: 33px;
+  
+}
+
+.photo-title {
+  font-size: 16px;
+  
+}
+
+.activites-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.activites-photos .photo {
+  margin-top: 33px;
   
 }
 .activites-photos img {
   width: 100%;
-  height: 370px;
+  height: 378px;
+  object-fit: cover;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
-.activites-photos .photo-content {
-  width: 67%;
-  padding-left: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  box-sizing: border-box;
-}
-  
 
+.activites-photos .photo-title {
+  margin-left: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.photo-content{
+  height: 60px;
+  padding-bottom: 10px;
+}
 
 /************************************* Footer *********************/
 
@@ -470,7 +488,7 @@ margin-right: 50px;
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media (min-width: 1024px) and (max-width: 768px) {
+@media (max-width: 1024px) {
 header{
   flex-direction: column;
   align-items: center;
@@ -494,15 +512,16 @@ nav ul{
   margin-top: -34px;
 }
 .filters-container {
-  background-color: red;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 .filters-container h2 {
-  background-color: green;
   width: 100%;
+  align-items: center;
+  
 }
+
 .hebergements-and-populaires {
   flex-direction: column;
 }
@@ -510,7 +529,7 @@ nav ul{
 .hebergements {
   width: 100%;
   order: 1;
-       
+  border-bottom: 32px;    
 }
 
 .populaires {
@@ -538,40 +557,22 @@ nav ul{
 .populaires-cards .card-subtitle {
   font-size: 13px;
 }
-  
-    
-.activites-photos{
-  display: flex;
+.activites-photos img {
   width: 100%;
-  flex-direction: row;
-  align-items: center;
-  gap: 25px;
-  margin-bottom: 30px;
-}
-
-.photo {
-  width: 100%;
-  margin-bottom: 20px;
-  background-color: white;
-  border-radius: 20px;
-  padding-bottom: 4px;
-  box-shadow: 9px 9px 15px rgba(0, 0, 0, 0.1);    
-      
-}
-    
-.photo img {
-  width: 100%;
-  height: 175;
+  height: 194px;
   object-fit: cover;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-      
 }
-    
-.photo h3{
-  width: 100%;
-}
+
+.activites-photos a{
   
+  box-sizing: border-box;
+  width: 24%;
+}
+.photo-content a{
+  padding-top: 0px;
+}
 .elements-footer {
   justify-content: space-between;
   padding: 10px;
@@ -579,15 +580,18 @@ nav ul{
   padding-left: 0px;
       
 }
-  
+.footer-title h3{
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
 
 .link {
-  font-size: 18px;
+  font-size: 15px;
   display: flex;
   flex-direction: column;
-  gap: 8px;
-    
-    
+  padding-bottom: 2px;
+     
 }
   
   }
@@ -650,13 +654,12 @@ nav ul{
   width: 100%;
 }
 .filters-container {
-  background-color: red;
   display: flex;
-  align-items: baseline;
+  justify-content: center;
   flex-wrap: wrap;
+ 
 }
 .filters-container h2 {
-  background-color: green;
   width: 100%;
 }
 .filters-container .filter {
@@ -671,7 +674,7 @@ nav ul{
 }
 
 .populaires {
-  width: 500px;
+  width: 100%;
   margin-top: 50px;
   order: 1;
   margin-bottom: 20px;
@@ -710,9 +713,9 @@ nav ul{
   padding: 30px;
 }
 .hebergements {
-    width: 500px;
+    width: 100%;
     order: 2;
-    gap: 20px;
+    
     
 }
 
@@ -721,62 +724,58 @@ nav ul{
   flex-direction: row;
   align-items: center;
   width: 100%;
-  gap: 20px;
+ 
   
 }
 
 .hebergements-cartes a {
   width: 100%;
-  gap: 20px;
+  margin-bottom: -10px;
 }
 
 .section-title{
   width: 100%;
 }
-.container-activites{
+.activites-à-marseille{
   width: 100%;
-  display: flex;
   
+}
+.activites-photos a{
+  box-sizing: border-box;
+  width: 100%;
+  margin-bottom: -40px;
 }
 
 .activites-photos{
   display: flex;
-  width: 100%;
   flex-direction: column;
   align-items: center;
-  gap: 0px;
-}
-
-.activites-title h2{
   width: 100%;
-  margin-top: -60px;
-  font-size: 15px;
-  background-color: red;
+ 
+  
 }
 
-.photo{
-  width: 408px;
-}
-.photo img{
+.activites-photos img {
   width: 100%;
-  height: 205px;
+  height: 138.5px;
+  object-fit: cover;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 
 }
-.photo-title truncate{
-    width: 200px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
+
+
 
 .container-footer{
-  width: 3700px;
+  width: 100%;
   background-color: var(--main-bg-color); 
   flex-direction: column;
+  margin-top: 80px;
 }
-
+*
 .section-title {
-  font-size: 22px;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .link{
